--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <source src="images/nlt_after.mp4" type="video/mp4">
                 Your browser does not support the video tag.
                 </video></div> -->
-                <img src='images/nCOVnet.jpg' width="180">
+                <img src='images/ncovnet.jpg' width="180">
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
@@ -112,7 +112,7 @@
                 <source src="images/nlt_after.mp4" type="video/mp4">
                 Your browser does not support the video tag.
                 </video></div> -->
-                <img src='images/AquaVision_2.jpg' width="180">
+                <img src='images/aquavision_2.jpg' width="180">
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
@@ -147,7 +147,7 @@
                 <source src="images/nlt_after.mp4" type="video/mp4">
                 Your browser does not support the video tag.
                 </video></div> -->
-                <img src='images/Grad-CAM.jpg' width="180">
+                <img src='images/grad-cam.jpg' width="180">
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
