--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <p style="text-align:center">
                 <name>Harsh Panwar</name>
               </p>
-              <p>I am a undergraduate research student at <a href="http://www.juit.ac.in/computer-science-engineering-information-technology">Jaypee University of Information Technology</a>, where I work on computer vision and machine learning.
+              <p>I am an undergraduate research student at <a href="http://www.juit.ac.in/computer-science-engineering-information-technology">Jaypee University of Information Technology</a>, where I work on computer vision and machine learning.
               </p>
               <p>
               	Research in human-centred AI and deep learning in the context of educational data science and Computer Vision. I'm particularly interested in understanding human behaviour in the context of human-machine collaboration, and engineering learning-based methods that enrich that collaboration
