--- a/index.html
+++ b/index.html
@@ -244,6 +244,15 @@
               <!-- <a href="http://cvpr2018.thecvf.com/organizers/area_chairs">Area Chair, CVPR 2018</a> -->
             </td>
           </tr>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/journal.jpg" height="150" width="150"></td>
+            <td width="75%" valign="center">
+              <a href="https://www.iospress.nl/journal/journal-of-x-ray-science-and-technology/">Reviewer, Journal of X-Ray Science and Technology</a>
+              <br>
+              <br>
+              <!-- <a href="http://cvpr2018.thecvf.com/organizers/area_chairs">Area Chair, CVPR 2018</a> -->
+            </td>
+          </tr>
          <!--  <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
               <img src="images/cs188.jpg" alt="cs188">
