--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:harshpanwar@ieee.org">Email</a> &nbsp/&nbsp
-                <a href="data/CV_Harsh_Panwar.pdf">CV</a> &nbsp/&nbsp
+                <a href="https://github.com/Harsh9524/Harsh9524.github.io/blob/master/data/CV_Harsh_Panwar.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://www.researchgate.net/profile/Harsh_Panwar2">ResearchGate</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=g0UG174AAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://www.github.com/Harsh9524">Github</a> &nbsp/&nbsp
