--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <p style="text-align:center">
                 <name>Harsh Panwar</name>
               </p>
-               <p>I am a final year B.Tech in Computer Science student at <a href="http://www.juit.ac.in/computer-science-engineering-information-technology">Jaypee University of Information Technology</a>, where I am advised by Dr. <a href="http://www.juit.ac.in/faculty.php?id=87&dep=cse&page=0"> Pradeep Kumar Gupta. I am also the Co-Founder of Edustage, recognised and funded by the Government it is India’s first and only AI-based Educational Consultancy.
+               <p>I am a final year B.Tech in Computer Science student at <a href="http://www.juit.ac.in/computer-science-engineering-information-technology">Jaypee University of Information Technology</a>, where I am advised by Dr. <a href="http://www.juit.ac.in/faculty.php?id=87&dep=cse&page=0"> Pradeep Kumar Gupta </a> . I am also the Co-Founder of Edustage, recognised and funded by the Government it is India’s first and only AI-based Educational Consultancy.
               </p>
               <p>
               	I’m doing research in human-centred AI and deep learning in the context of Educational Data Science and Medical Image Processing. I'm particularly interested in understanding human behaviour and engineering learning-based methods that enrich the human-machine collaboration.
