--- a/test.html
+++ b/test.html
@@ -183,7 +183,7 @@ while True:
               <p>
                 <i> TensorBoard provides the visualisation and tooling needed for machine learning experimentation. </i> </p>
               <p> The following code can be used for visualising the data with the help of TensorBoard projector which creates a mesh of words using PCA and each word is connected to other by calculating their Cosine similarities.</p>
-              <p style="color:LightGray;">
+              <p style="background-color:rgb(224,224,224);">
                 <i> 
                 <br> model2 = gensim.models.keyedvectors.KeyedVectors.load(‘model_out’)
                <br> max_size = len(model2.wv.vocab)-1
