--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="https://www.researchgate.net/profile/Harsh_Panwar2">ResearchGate</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=g0UG174AAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://www.github.com/Harsh9524">Github</a> &nbsp/&nbsp
-                <a href="https://www.instagram.com/harsh_.panwar/">Instagram</a>
+                <a href="https://twitter.com/harsh9524">Twitter</a>
                 <!-- <a href="https://www.linkedin.com/in/harsh-panwar/">LinkedIn</a> -->
               </p>
             </td>
