--- a/test.html
+++ b/test.html
@@ -163,7 +163,7 @@ Firstly, since our data is in .txt format we need to open it using the with open
               <p> <i> Word2vec is a group of related models that are used to produce word embeddings. These models are shallow, two-layer neural networks that are trained to reconstruct linguistic contexts of words. </i> </p>
               <p>Now we are going to implement CBOW model Xrst and then later on we will implement the Skip Gram model. </p>
              
-              <p"background-color:rgb(224,224,224);"> 
+              <p style="background-color:rgb(224,224,224);"> 
                 
               <br>&nbsp;&nbsp; if not os.path.exists(‘model_out’):
               <br>&nbsp;&nbsp;&nbsp;&nbsp; model1 = gensim.models.Word2Vec(l, min_count = 1, size = 100, window = 5)
