--- a/train-skill-embeddings.html
+++ b/train-skill-embeddings.html
@@ -30,9 +30,10 @@
               <p style="text-align:center">
                 <name>Practical Approach to Word Embeddings using Word2Vec and Genism</name>
               </p>
-              <p> By <i> <b>  Harsh Panwar </b> </i>
-              <br> 
-                <i> Department of Computer Science and Engineering, Jaypee University of Information Technology  </i>
+              <p> By <i>   Harsh Panwar  </i>
+              </p>
+              <p>
+                 Department of Computer Science and Engineering, Jaypee University of Information Technology  
               </p>
               <p> Dec 15,2019 - 5 min read </p>
               
