--- a/train-skill-embeddings.html
+++ b/train-skill-embeddings.html
@@ -33,7 +33,8 @@
               <p> By <i>   Harsh Panwar  </i>
               </p>
               <p>
-                 Department of Computer Science and Engineering, Jaypee University of Information Technology  
+                 Department of Computer Science and Engineering
+                 <br> Jaypee University of Information Technology  
               </p>
               <p> Dec 15,2019 - 5 min read </p>
               
