--- a/index.html
+++ b/index.html
@@ -66,6 +66,37 @@
         </tbody></table>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='nlt_image'><!-- <video  width=100% height=100% muted autoplay loop>
+                <source src="images/nlt_after.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+                </video></div> -->
+                <img src='images/mes.jpg' width="180">
+              </div>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="https://www.sciencedirect.com/science/article/pii/S096007792030343X#!">
+                <papertitle>Application of Deep Learning on Student Engagement in e-learning environments</papertitle>
+              </a>
+              <br>
+              
+              <a href="https://www.linkedin.com/in/prakhar-bhardwaj-07/">Prakhar Bhardwaj</a>,
+              <a href="http://www.juit.ac.in/faculty.php?id=87&dep=cse&page=0">P.K.Gupta</a>,
+              <strong>Harsh Panwar</strong>,
+              <a href="https://scholar.google.com/citations?user=5pfH0EoAAAAJ&hl=en&oi=ao">Mohammad Khubeb Siddiqui</a>,
+              <a href="http://www.tecgradschool.mx/ruben-morales-menendez-phd">Ruben Morales-Menendez</a>,
+              <a href="https://www.linkedin.com/in/anubha2098/">Anubha Bhaik</a>
+              <br>
+              <em>Computers & Electrical Engineering</em>, 2021
+              <br>
+              <a href="https://doi.org/10.1016/j.compeleceng.2021.107277">PDF</a> /
+
+              <p></p>
+              <p>The paper proposes novel state-of-the-art algorithms which compute the Mean Engagement Score (MES) by analyzing the obtained results from facial landmark detection, emotional recognition and the weights from a survey conducted on students over an hour-long class. The proposed automated approach will certainly help educational institutions in achieving an improved and innovative digital learning method.</p>
+            </td>
+          </tr> 
 
 
           <tr>
@@ -123,7 +154,7 @@
               <a href="http://www.juit.ac.in/faculty.php?id=87&dep=cse&page=0">P.K.Gupta</a>,
               <a href="https://scholar.google.com/citations?user=5pfH0EoAAAAJ&hl=en&oi=ao">Mohammad Khubeb Siddiqui</a>,
               <a href="http://www.tecgradschool.mx/ruben-morales-menendez-phd">Ruben Morales-Menendez</a>,
-              <a href="https://www.linkedin.com/in/vaishnavisingh9/">Prakhar Bhardwaj</a>,
+              <a href="https://www.linkedin.com/in/prakhar-bhardwaj-07/">Prakhar Bhardwaj</a>,
               <a href="https://www.linkedin.com/in/sudhansh-sharma-7078a71a1/">Sudhansh Sharma</a>,
               <a href="https://sites.google.com/site/iqbalsarkercse/">Iqbal H.Sarker</a>
               <br>
