--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:harshpanwar@ieee.org">Email</a> &nbsp/&nbsp
-                <a href="https://github.com/Harsh9524/Harsh9524.github.io/blob/master/data/CV_Harsh_Panwar.pdf">CV</a> &nbsp/&nbsp
+<!--                 <a href="https://github.com/Harsh9524/Harsh9524.github.io/blob/master/data/CV_Harsh_Panwar.pdf">CV</a> &nbsp/&nbsp -->
                 <a href="https://www.researchgate.net/profile/Harsh_Panwar2">ResearchGate</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=g0UG174AAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://www.github.com/Harsh9524">Github</a> &nbsp/&nbsp
@@ -73,7 +73,7 @@
                 <source src="images/nlt_after.mp4" type="video/mp4">
                 Your browser does not support the video tag.
                 </video></div> -->
-                <img src='images/mes.jpg' width="180">
+                <img src='images/1-s2.0-S0045790621002597-gr4.jpg' width="180">
               </div>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
