--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <br>
               <em>Computers & Electrical Engineering</em>, 2021
               <br>
-              <a href="https://doi.org/10.1016/j.compeleceng.2021.107277">PDF</a> /
+              <a href="https://doi.org/10.1016/j.compeleceng.2021.107277">PDF</a> 
 
               <p></p>
               <p>The paper proposes novel state-of-the-art algorithms which compute the Mean Engagement Score (MES) by analyzing the obtained results from facial landmark detection, emotional recognition and the weights from a survey conducted on students over an hour-long class. The proposed automated approach will certainly help educational institutions in achieving an improved and innovative digital learning method.</p>
