--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
               <p style="text-align:center">
                 <name>Harsh Panwar</name>
               </p>
-               <p>I am a final year B.Tech in Computer Science student at <a href="http://www.juit.ac.in/computer-science-engineering-information-technology">Jaypee University of Information Technology</a>, where I am advised by Dr. <a href="http://www.juit.ac.in/faculty.php?id=87&dep=cse&page=0"> Pradeep Kumar Gupta </a> . I am also the Co-Founder of Edustage, recognised and funded by the Government it is India’s first and only AI-based Educational Consultancy.
+               <p>Hi! I am a Computer Science Engineer and a future MSc, Artificial Intelligence candidate at <a href="https://www.qmul.ac.uk">Queen Mary University of London</a>.
+                 I am also the Co-Founder of Edustage, which is India’s first AI based EdTech service provider recognised and funded by the 
+                 Government of Himachal Pradesh. 
               </p>
               <p>
-              	I’m doing research in human-centred AI and deep learning in the context of Educational Data Science and Medical Image Processing. I'm particularly interested in understanding human behaviour and engineering learning-based methods that enrich the human-machine collaboration.
+              	Before starting to the graduate school, I completed my undergraduate studies in Computer Science Engineering at <a href="https://www.juit.ac.in">Jaypee University of Information Technology</a>
+                where I was advised by <a=href="http://www.juit.ac.in/faculty.php?id=87&dep=cse&page=0">Dr. Pradeep Kumar Gupta</a> and my research focused on Medical Image Processing and Educational Data Science. 
                 
               </p>
               <p style="text-align:center">
