--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               </p>
               <p>
               	Before starting to the graduate school, I completed my undergraduate studies in Computer Science Engineering at <a href="https://www.juit.ac.in">Jaypee University of Information Technology</a>
-                where I was advised by <a=href="http://www.juit.ac.in/faculty.php?id=87&dep=cse&page=0">Dr. Pradeep Kumar Gupta</a> and my research focused on Medical Image Processing and Educational Data Science. 
+                where I was advised by <a href="http://www.juit.ac.in/faculty.php?id=87&dep=cse&page=0">Dr. Pradeep Kumar Gupta</a> and my research focused on Medical Image Processing and Educational Data Science. 
                 
               </p>
               <p style="text-align:center">
